@@ -2,8 +2,11 @@ package uk.co.ogauthority.pathfinder.service.dashboard;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Collections;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -13,7 +16,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 import uk.co.ogauthority.pathfinder.auth.AuthenticatedUserAccount;
 import uk.co.ogauthority.pathfinder.energyportal.service.SystemAccessService;
 import uk.co.ogauthority.pathfinder.model.entity.dashboard.DashboardProjectItem;
-import uk.co.ogauthority.pathfinder.repository.dashboard.DashboardProjectItemRepository;
+import uk.co.ogauthority.pathfinder.model.enums.project.ProjectStatus;
 import uk.co.ogauthority.pathfinder.service.team.TeamService;
 import uk.co.ogauthority.pathfinder.testutil.DashboardProjectItemTestUtil;
 import uk.co.ogauthority.pathfinder.testutil.UserTestingUtil;
@@ -22,7 +25,10 @@ import uk.co.ogauthority.pathfinder.testutil.UserTestingUtil;
 public class DashboardServiceTest {
 
   @Mock
-  private DashboardProjectItemRepository dashboardProjectItemRepository;
+  RegulatorDashboardService regulatorDashboardService;
+
+  @Mock
+  OperatorDashboardService operatorDashboardService;
 
   @Mock
   private TeamService teamService;
@@ -34,32 +40,58 @@ public class DashboardServiceTest {
   );
 
   private final DashboardProjectItem dashboardProjectItem = DashboardProjectItemTestUtil.getDashboardProjectItem();
+  private final DashboardProjectItem qaItem = DashboardProjectItemTestUtil.getDashboardProjectItem(ProjectStatus.QA);
 
   @Before
   public void setUp() throws Exception {
     dashboardService = new DashboardService(
-        dashboardProjectItemRepository,
-        teamService
+        teamService,
+        regulatorDashboardService,
+        operatorDashboardService
     );
   }
 
   @Test
-  public void getDashboardProjectItemsForUser_emptyListIfUserIsInRegulatorTeam() {
+  public void getDashboardProjectItemsForUser_noResultsForRegulatorUser() {
     when(teamService.isPersonMemberOfRegulatorTeam(authenticatedUser.getLinkedPerson())).thenReturn(true);
-    assertThat(dashboardService.getDashboardProjectItemsForUser(authenticatedUser)).isEmpty();
+    when(regulatorDashboardService.getDashboardProjectItems()).thenReturn(Collections.emptyList());
+    assertThat(dashboardService.getDashboardProjectItemsForUser(authenticatedUser).size()).isEqualTo(0);
+
+    verify(regulatorDashboardService, times(1)).getDashboardProjectItems();
+    verify(operatorDashboardService, times(0)).getDashboardProjectItems(any());
   }
 
   @Test
-  public void getDashboardProjectItemsForUser_resultsForOperatorUser() {
+  public void getDashboardProjectItemViewsForUser_regulatorUserCorrectNumberOfViewsReturned() {
+    when(teamService.isPersonMemberOfRegulatorTeam(authenticatedUser.getLinkedPerson())).thenReturn(true);
+    when(regulatorDashboardService.getDashboardProjectItems()).thenReturn(List.of(qaItem));
+    assertThat(dashboardService.getDashboardProjectItemViewsForUser(authenticatedUser).size()).isEqualTo(1);
+
+    verify(regulatorDashboardService, times(1)).getDashboardProjectItems();
+    verify(operatorDashboardService, times(0)).getDashboardProjectItems(any());
+  }
+
+  @Test
+  public void getDashboardProjectItemsForUser_noResultsForOperatorUser() {
     when(teamService.isPersonMemberOfRegulatorTeam(authenticatedUser.getLinkedPerson())).thenReturn(false);
-    when(dashboardProjectItemRepository.findAllByOrganisationGroupInOrderByCreatedDatetimeDesc(any())).thenReturn(List.of(dashboardProjectItem));
-    assertThat(dashboardService.getDashboardProjectItemsForUser(authenticatedUser).size()).isEqualTo(1);
+    when(operatorDashboardService.getDashboardProjectItems(authenticatedUser.getLinkedPerson())).thenReturn(
+        Collections.emptyList()
+    );
+    assertThat(dashboardService.getDashboardProjectItemsForUser(authenticatedUser).size()).isEqualTo(0);
+
+    verify(regulatorDashboardService, times(0)).getDashboardProjectItems();
+    verify(operatorDashboardService, times(1)).getDashboardProjectItems(any());
   }
 
   @Test
   public void getDashboardProjectItemViewsForUser_operatorUserCorrectNumberOfViewsReturned() {
     when(teamService.isPersonMemberOfRegulatorTeam(authenticatedUser.getLinkedPerson())).thenReturn(false);
-    when(dashboardProjectItemRepository.findAllByOrganisationGroupInOrderByCreatedDatetimeDesc(any())).thenReturn(List.of(dashboardProjectItem));
+    when(operatorDashboardService.getDashboardProjectItems(authenticatedUser.getLinkedPerson())).thenReturn(
+        List.of(dashboardProjectItem)
+    );
     assertThat(dashboardService.getDashboardProjectItemViewsForUser(authenticatedUser).size()).isEqualTo(1);
+
+    verify(regulatorDashboardService, times(0)).getDashboardProjectItems();
+    verify(operatorDashboardService, times(1)).getDashboardProjectItems(any());
   }
 }
